examples/test/testpolicy2221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2221
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key37: value13
      key28: value48
      key1: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value43
      podSelector:
        matchLabels:
          key35: value23
          key49: value5
          key36: value14
